Convert the last USE_ICONV to USES=iconv
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316695 35697150-7ecd-e111-bb59-0022644237b5

--- a/comms/efax-gtk/Makefile
+++ b/comms/efax-gtk/Makefile
@@ -27,8 +27,7 @@ LIB_DEPENDS=	pthread-stubs:${PORTSDIR}/devel/libpthread-stubs \
 		xcb:${PORTSDIR}/x11/libxcb
 RUN_DEPENDS=	ggv:${PORTSDIR}/print/ggv
 
-USES=		pkgconfig
-USE_ICONV=	yes
+USES=		pkgconfig iconv
 USE_GHOSTSCRIPT_RUN=yes
 USE_GNOME=	gdkpixbuf2 gtk20
 GNU_CONFIGURE=	yes
