--- a/comms/minicom/Makefile
+++ b/comms/minicom/Makefile
@@ -14,7 +14,7 @@ OPTIONS_DEFINE=	LRZSZ
 OPTIONS_DEFAULT=LRZSZ
 LRZSZ_DESC=	Install X/Y/ZMODEM protocol handlers
 
-USE_ICONV=	yes
+USES=		iconv
 CPPFLAGS+=	-I${LOCALBASE}/include
 LDFLAGS+=	-L${LOCALBASE}/lib
 GNU_CONFIGURE=	yes
