--- a/lang/gcc-aux/Makefile.common
+++ b/lang/gcc-aux/Makefile.common
@@ -9,7 +9,7 @@ ONLY_FOR_ARCHS= 	i386 amd64
 GNU_CONFIGURE=		yes
 USE_GMAKE=		yes
 USE_BZIP2=		yes
-USE_ICONV=		yes
+USES=			iconv
 USE_PERL5_BUILD=	yes
 ALL_TARGET=		default
 MAKE_JOBS_SAFE= 	yes
