--- a/lang/php53/Makefile.ext
+++ b/lang/php53/Makefile.ext
@@ -127,7 +127,7 @@ CONFIGURE_ARGS+=--enable-hash \
 .if ${PHP_MODNAME} == "iconv"
 CONFIGURE_ARGS+=--with-iconv=${LOCALBASE}
 
-USE_ICONV=	yes
+USES+=	iconv
 .endif
 
 .if ${PHP_MODNAME} == "imap"
@@ -432,7 +432,7 @@ CONFIGURE_ARGS+=--with-xmlrpc \
 		--with-libxml-dir=${LOCALBASE} \
 		--with-iconv-dir=${LOCALBASE}
 
-USE_ICONV=	yes
+USES+=		iconv
 USE_GNOME=	libxml2
 
 PHP_HEADER_DIRS=libxmlrpc
