--- a/lang/php5/Makefile.ext
+++ b/lang/php5/Makefile.ext
@@ -128,7 +128,7 @@ CONFIGURE_ARGS+=--enable-hash \
 .if ${PHP_MODNAME} == "iconv"
 CONFIGURE_ARGS+=--with-iconv=${LOCALBASE}
 
-USE_ICONV=	yes
+USES+=	iconv
 .endif
 
 .if ${PHP_MODNAME} == "imap"
@@ -427,7 +427,7 @@ CONFIGURE_ARGS+=--with-xmlrpc \
 		--with-libxml-dir=${LOCALBASE} \
 		--with-iconv-dir=${LOCALBASE}
 
-USE_ICONV=	yes
+USES+=		iconv
 USE_GNOME=	libxml2
 
 PHP_HEADER_DIRS=libxmlrpc
