--- a/x11-toolkits/gtkglext/Makefile
+++ b/x11-toolkits/gtkglext/Makefile
@@ -26,13 +26,12 @@ LIB_DEPENDS=	pthread-stubs:${PORTSDIR}/devel/libpthread-stubs \
 OPTIONS_DEFINE=	DOCS
 
 USE_BZIP2=	yes
-USE_ICONV=	yes
 USE_GMAKE=	yes
 USE_AUTOTOOLS=	libtool
 USE_XORG=	ice pixman sm x11 xau xcomposite xcursor xdamage xdmcp xext \
 		xfixes xi xinerama xmu xrandr xrender xt xxf86vm
 USE_GL=		glu
-USES=		pathfix pkgconfig gettext
+USES=		pathfix pkgconfig gettext iconv
 USE_GNOME=	gdkpixbuf2 gtk20
 USE_LDCONFIG=	yes
 
