- Add new port: devel/R-cran-gdata
  gdata package provides various R programming tools for data
  manipulation.

  WWW: http://cran.r-project.org/web/packages/gdata/


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316699 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -17,6 +17,7 @@
     SUBDIR += R-cran-chron
     SUBDIR += R-cran-foreach
     SUBDIR += R-cran-gbm
+    SUBDIR += R-cran-gdata
     SUBDIR += R-cran-glmnet
     SUBDIR += R-cran-gsubfn
     SUBDIR += R-cran-gtools
