- Fix OPENGL port option
Submitted by:	 green dog <fiziologus@gmail.com>


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316704 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/guichan/Makefile
+++ b/devel/guichan/Makefile
@@ -42,7 +42,7 @@ CONFIGURE_ARGS+=--disable-allegro
 PLIST_SUB+=	ALLEGRO="@comment "
 .endif
 
-.if ${PORT_OPTIONS:MGL}
+.if ${PORT_OPTIONS:MOPENGL}
 USE_GL=		yes
 CONFIGURE_ARGS+=--enable-opengl
 PLIST_SUB+=	GL=""
