--- a/devel/py-rauth/Makefile
+++ b/devel/py-rauth/Makefile
@@ -2,7 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	rauth
-PORTVERSION=	0.5.1
+PORTVERSION=	0.5.4
 CATEGORIES=	devel www python
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
@@ -11,11 +11,11 @@ COMMENT=	Python library for OAuth 1.0/a, 2.0, and Ofly consumers
 
 LICENSE=	MIT
 
-RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}requests>0.12.0:${PORTSDIR}/www/py-requests
+RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}requests>=1.0.0:${PORTSDIR}/www/py-requests
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	litl
-GH_COMMIT=	c520bf1
+GH_COMMIT=	af344ef
 
 OPTIONS_DEFINE=	TESTS
 TESTS_DESC=	Install tools for unit testing
@@ -32,8 +32,8 @@ USE_PYTHON=		yes
 USE_PYDISTUTILS=	easy_install
 
 TEST_DEPENDS:=	${RUN_DEPENDS} \
-		nosetests:${PORTSDIR}/devel/py-nose \
-		${PYTHON_PKGNAMEPREFIX}mock>0:${PORTSDIR}/devel/py-mock
+		${PYTHON_PKGNAMEPREFIX}nose>=1.2.1:${PORTSDIR}/devel/py-nose \
+		${PYTHON_PKGNAMEPREFIX}mock>=1.0.1:${PORTSDIR}/devel/py-mock
 
 regression-test: build
 	@cd ${WRKSRC} && nosetests
