www/py-slumber: Update to 0.6.0
- Tweak COMMENT
- Tests are no longer installed, remove them from pkg-plist
- This update brings with it py-requests 1.x compatibility

Changes: https://github.com/dstufft/slumber/blob/v0.6.0/CHANGELOG.rst

Approved by:	eadler, rm (mentors, implicit)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316706 35697150-7ecd-e111-bb59-0022644237b5

--- a/www/py-slumber/Makefile
+++ b/www/py-slumber/Makefile
@@ -2,13 +2,12 @@
 # $FreeBSD$
 
 PORTNAME=	slumber
-PORTVERSION=	0.5.1
-PORTREVISION=	1
+PORTVERSION=	0.6.0
 CATEGORIES=	www python
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
 MAINTAINER=	koobs@FreeBSD.org
-COMMENT=	Python library that makes consuming a REST API easier
+COMMENT=	Python library that makes consuming a RESTful API easier
 
 LICENSE=	BSD
 
@@ -29,7 +28,7 @@ USE_PYTHON=		yes
 USE_PYDISTUTILS=	easy_install
 
 GH_ACCOUNT=	dstufft
-GH_COMMIT=	e5bde78
+GH_COMMIT=	85b17b9
 GH_TAGNAME=	v${DISTVERSION}
 
 TEST_DEPENDS:=	${RUN_DEPENDS} \
