Add par 0.03.01, an archiver for Quake I and II packed data files (pakX.pak). It supports listing, extraction, and creation of .pak archives.
WWW: http://ibiblio.org/pub/linux/games/quake/


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316707 35697150-7ecd-e111-bb59-0022644237b5

--- a/archivers/Makefile
+++ b/archivers/Makefile
@@ -122,6 +122,7 @@
     SUBDIR += p7zip
     SUBDIR += packddir
     SUBDIR += paq
+    SUBDIR += par
     SUBDIR += par2cmdline
     SUBDIR += par2cmdline-tbb
     SUBDIR += parchive
