Enforce correct type (per specification) and drop unneeded backslashes.
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316711 35697150-7ecd-e111-bb59-0022644237b5

--- a/archivers/par/Makefile
+++ b/archivers/par/Makefile
@@ -24,7 +24,8 @@ OPTIONS_DEFINE=	DOCS
 
 post-patch:
 	@${REINPLACE_CMD} -e 's,-Wall.*-pipe,${CFLAGS}, ; \
-		s,\"Linux,\"${OPSYS},' ${WRKSRC}/${MAKEFILE}
+		s,"Linux,"${OPSYS},' ${WRKSRC}/${MAKEFILE}
+	@${REINPLACE_CMD} -e 's,off_t,uint32_t,g' ${WRKSRC}/par.c
 
 do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/${PORTNAME} ${PREFIX}/bin
