Remove incorrect build dependency on multimedia/v4l_compat.
PR:		173191
Submitted by:	IWAMOTO Kouichi <sue@iwmt.org>
Approved by:	Takeshi MUTOH <mutoh@openedu.org> (maintainer)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316713 35697150-7ecd-e111-bb59-0022644237b5

--- a/lang/squeak/Makefile
+++ b/lang/squeak/Makefile
@@ -23,8 +23,7 @@ LICENSE_COMB=		multi
 
 # Don't set USE_ZIP as this breaks EXTRACT_CMD.
 BUILD_DEPENDS=		${UNZIP_CMD}:${PORTSDIR}/archivers/unzip \
-			cmake:${PORTSDIR}/devel/cmake \
-			${LOCALBASE}/include/libv4l2.h:${PORTSDIR}/multimedia/v4l_compat
+			cmake:${PORTSDIR}/devel/cmake
 LIB_DEPENDS=		audio:${PORTSDIR}/audio/nas \
 			ffi:${PORTSDIR}/devel/libffi \
 			asound:${PORTSDIR}/audio/alsa-lib \
